--- a/PeacefulHills/Assets/Scripts/Shared/PeacefulHills.Shared.asmdef
+++ b/PeacefulHills/Assets/Scripts/Shared/PeacefulHills.Shared.asmdef
@@ -11,7 +11,8 @@
         "GUID:e04e6c86a9f3947eb95fded39f9e60cc",
         "GUID:63afb046c8423dd448ae7aba042ea63d",
         "GUID:a5baed0c9693541a5bd947d336ec7659",
-        "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f"
+        "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f",
+        "GUID:b46779583a009f04ba9f5f31d0e7e6ac"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
