--- a/PeacefulHills/Packages/manifest.json
+++ b/PeacefulHills/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.visualstudio": "2.0.7",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.physics": "0.6.0-preview.3",
+    "com.unity.profiling.core": "1.0.0-pre.1",
     "com.unity.render-pipelines.universal": "10.4.0",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.4",
