--- a/PeacefulHills/Assets/Scripts/PeacefulHills.Network/Tests/PeacefulHills.Network.Tests.asmdef
+++ b/PeacefulHills/Assets/Scripts/PeacefulHills.Network/Tests/PeacefulHills.Network.Tests.asmdef
@@ -18,7 +18,7 @@
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": false,
+    "allowUnsafeCode": true,
     "overrideReferences": true,
     "precompiledReferences": [
         "nunit.framework.dll"
