--- a/PeacefulHills/Assets/Scripts/PeacefulHills.Network/Runtime/Shared/PeacefulHills.Network.asmdef
+++ b/PeacefulHills/Assets/Scripts/PeacefulHills.Network/Runtime/Shared/PeacefulHills.Network.asmdef
@@ -10,7 +10,8 @@
         "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f",
         "GUID:b46779583a009f04ba9f5f31d0e7e6ac",
         "GUID:f5b9803ac69cb20489775d260d734278",
-        "GUID:8d04bd15f5e4a30418dfdc6c68c8c58a"
+        "GUID:8d04bd15f5e4a30418dfdc6c68c8c58a",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
